# ConCert

./: #Correctness.v#  #Facts.v#  .#Facts.v  .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .lia.cache  .travis.yml  AcornExamples.v  AcornMap.v  Ast.v  CHANGELOG.md  Correctness.v  CustomTactics.v  Demo.v  DemoCoBRA.v  Dockerfile  EnvSubst.v  EvalE.v  ExampleContracts.v  ExecFrameworkExamples.v  ExecFrameworkIntegration.v  Facts.v  LICENSE  LangComparisonPage.v  Makefile  MyEnv.v  NOTICE  OakMap.v  PCUICCorrectness.v  PCUICCorrectnessAlt.v  PCUICFacts.v  PCUICTranslate.v  PCUICWcbvEvalAlt.v  PCUICWcbvEvalCurrent.v  README.md  TCTranslate.v  _CoqProject  (+14 more)
.github/: coq-concert.opam.locked  coq-errors.json  dependabot.yml  opam-errors.json  rocq-concert.opam.locked  rocq-errors.json
.nix/: config.nix  coq-nix-toolbox.nix
docs/: AcornMap.html  Ast.html  ConCert.Ast.html  ConCert.CustomTactics.html  ConCert.EnvSubst.html  ConCert.EvalE.html  ConCert.Misc.html  ConCert.MyEnv.html  ConCert.Notations.html  ConCert.Tests.html  ConCert.Wf.html  ConCert.examples.AcornExamples.html  ConCert.examples.Demo.html  ConCert.examples.ExecFrameworkIntegration.html  ConCert.examples.FinMap.html  ConCert.examples.Utils.html  ConCert.examples.crowdfunding.Crowdfunding.html  ConCert.examples.crowdfunding.CrowdfundingData.html  ConCert.examples.crowdfunding.Prelude.html  ConCert.examples.crowdfunding.SimpleBlockchain.html  ConCert.pcuic.PCUICCorrectness.html  ConCert.pcuic.PCUICCorrectnessAux.html  ConCert.pcuic.PCUICFacts.html  ConCert.pcuic.PCUICTranslate.html  ConCert.pcuic.PCUICtoTemplate.html  CustomTactics.html  Demo.html  EnvSubst.html  EvalE.html  ExampleContracts.html  MyEnv.html  OakMap.html  RecordUpdate.RecordSet.html  RecordUpdate.RecordUpdate.html  SmartContracts.Automation.html  SmartContracts.Blockchain.html  SmartContracts.BoundedN.html  (+14 more)
embedding/examples/: AcornExamples.v  Demo.v  DemoLogSemSeminar.v  ExecFrameworkIntegration.v  FinMap.v  Prelude.v  SimpleBlockchain.v  Utils.v  dune
embedding/examples/crowdfunding/: Crowdfunding.v  CrowdfundingData.v
embedding/extraction/: Counter.v  Crowdfunding.v  CrowdfundingData.v  Liquidity.v  PreludeExt.v  SimpleBlockchainExt.v  dune
embedding/theories/: Ast.v  Certifying.v  CertifyingTranslate.v  CustomTactics.v  EnvSubst.v  EvalE.v  Misc.v  MyEnv.v  Notations.v  Prelude.v  SimpleBlockchain.v  Tests.v  TranslationUtils.v  Utils.v  Wf.v  dune
embedding/theories/examples/: AcornExamples.v  Demo.v  ExecFrameworkIntegration.v  FinMap.v
embedding/theories/examples/counter/: Counter.v  CounterBlockchain.v  CounterData.v
embedding/theories/examples/crowdfunding/: Crowdfunding.v  CrowdfundingData.v  Prelude.v
embedding/theories/extraction/: Counter.v  Liquidity.v
embedding/theories/pcuic/: PCUICCorrectness.v  PCUICCorrectnessAux.v  PCUICFacts.v  PCUICTranslate.v  PCUICtoTemplate.v
examples/boardroomVoting/extract/: ExtractBoardroomVotingLIGO.v  dune
examples/counter/: Counter.v  dune
examples/counter/embedding/: CounterEmbed.v
examples/counter/extraction/: CameLIGOCounter.v  CounterCertifiedExtraction.v  CounterCertifiedLiquidity.v  CounterDepCertifiedExtraction.v  CounterDepCertifiedLiquidity.v  CounterLIGO.v  CounterRefTypesMidlang.v  CounterRust.v  CounterSubsetTypes.v  CounterSubsetTypesLIGO.v  CounterSubsetTypesLiquidity.v  MidlangCounterRefTypes.v  RustCounter.v
examples/crowdfunding/: Crowdfunding.v  CrowdfundingCameLIGO.v  CrowdfundingCertifiedExtraction.v  CrowdfundingCorrect.v  CrowdfundingData.v  CrowdfundingDataExt.v  CrowdfundingExt.v  CrowdfundingLiquidity.v  ExecFrameworkIntegration.v  dune
examples/crowdfunding/extract/: ExtractCrowdfundingCameLIGO.v  ExtractCrowdfundingLiquidity.v  dune
examples/dexter2/extract/: ExtractCPMMLIGO.v  ExtractFA12LIGO.v  dune
execution/test/: AllTests.v  ChainPrinters.v  LocalBlockchain.v  QCTest.v  SerializablePrinters.v  TestNotation.v  TestUtils.v  TraceGens.v  dune
extra/: LICENSE  (+4 more)
extraction/examples/concordium-extract/interp/: Cargo.toml
extraction/examples/concordium-extract/interp/src/: lib.rs
extraction/examples/extracted-code/concordium-extract/concert-std/: Cargo.toml
extraction/examples/extracted-code/concordium-extract/concert-std/src/: lib.rs
extraction/examples/extracted-code/concordium-extract/interp-extracted/: Cargo.toml
extraction/tests/: Ack.v  CameLIGOExtractionTests.v  ElmExtractExamples.v  ElmExtractTests.v  ElmForms.v  ErasureTests.v  NumLiteralTests.v  RecordExtractionLiquidityTests.v  RustExtractTests.v  TypeAnnotationTests.v  dune
extraction/tests/extracted-code/: .gitignore
extraction/tests/extracted-code/concordium-extract/concert-std/: Cargo.toml
extraction/tests/extracted-code/concordium-extract/concert-std-derive/: Cargo.toml
extraction/tests/extracted-code/concordium-extract/counter-extracted/: Cargo.toml
extraction/tests/extracted-code/concordium-extract/escrow-extracted/: Cargo.toml
extraction/tests/extracted-code/concordium-extract/escrow-extracted/src/: tests.rs
extraction/tests/extracted-code/concordium-extract/interp-extracted/: Cargo.toml
extraction/tests/extracted-code/rust-extract/: Ack.main  Even.main
extraction/tests/extracted-code/rust-extract/Ack-extracted/: Cargo.toml
extraction/tests/extracted-code/rust-extract/Even-extracted/: Cargo.toml
extraction/theories/: #CertifyingEta.v#  .#CertifyingEta.v  AffineLambdaCalculus.v  AnalyzeCorrectness.v  Annotations.v  Aux.v  BetaEq.v  CameLIGOExtract.v  CameLIGOPretty.v  Certified.v  Certifying.v  CertifyingBeta.v  CertifyingEta.v  CertifyingInlining.v  ClosedAux.v  Common.v  Common.v.orig  ConcordiumExtract.v  Dependencies.v  ESubterm.v  ElmExtract.v  Erasure.v  ErasureCorrectness.v  ErasureTests.v  ExAst.v  ExTyping.v  ExpandBranches.v  Extra.v  ExtractExtraction.v  Extraction.v  ExtractionCorrectness.v  Inlining.v  LPretty.v  Liquidity.v  LiquidityExtract.v  LiquidityPretty.v  Loader.v  MetaCoqErasureCorrectnessStrong.v  MidlangExtract.v  MidlangPretty.v  (+21 more)
extraction/theories/examples/: Counter.v  CounterCertifiedExtraction.v
(+668 files in other folders)
