opam-version: "2.0"
name: "coq-concert"
version: "dev"
synopsis: "A framework for smart contract verification in Coq"
description: """
A framework for smart contract verification in Coq
"""
maintainer: "Danil Annenkov <danil.v.annenkov@gmail.com>"
authors: "The COBRA team"
license: "MIT"
homepage: "https://github.com/AU-COBRA/ConCert"
dev-repo: "git+https://github.com/AU-COBRA/ConCert.git"
bug-reports: "https://github.com/AU-COBRA/ConCert/issues"
doc: "https://au-cobra.github.io/ConCert/toc.html"

depends: [
  "coq" {>= "8.19" & < "8.20~"}
  "coq-bignums" {>= "8"}
  "coq-quickchick" {>= "2.0.4"}
  "coq-metacoq-utils" {>= "1.3.1" & < "1.4~"}
  "coq-metacoq-common" {>= "1.3.1" & < "1.4~"}
  "coq-metacoq-template" {>= "1.3.1" & < "1.4~"}
  "coq-metacoq-template-pcuic" {>= "1.3.1" & < "1.4~"}
  "coq-metacoq-pcuic" {>= "1.3.1" & < "1.4~"}
  "coq-metacoq-safechecker" {>= "1.3.1" & < "1.4~"}
  "coq-metacoq-erasure" {>= "1.3.1" & < "1.4~"}
  "coq-rust-extraction" {= "0.1.0"}
  "coq-elm-extraction" {= "0.1.0"}
  "coq-stdpp" {>= "1.9.0" & < "1.11~"}
]

pin-depends: [
  ["coq-metacoq-utils.1.3.2+8.19" "git+https://github.com/MetaCoq/metacoq.git#a9f5da7534b62cda3c870e64f00998e7ee5485f5"]
  ["coq-metacoq-common.1.3.2+8.19" "git+https://github.com/MetaCoq/metacoq.git#a9f5da7534b62cda3c870e64f00998e7ee5485f5"]
  ["coq-metacoq-template.1.3.2+8.19" "git+https://github.com/MetaCoq/metacoq.git#a9f5da7534b62cda3c870e64f00998e7ee5485f5"]
  ["coq-metacoq-template-pcuic.1.3.2+8.19" "git+https://github.com/MetaCoq/metacoq.git#a9f5da7534b62cda3c870e64f00998e7ee5485f5"]
  ["coq-metacoq-pcuic.1.3.2+8.19" "git+https://github.com/MetaCoq/metacoq.git#a9f5da7534b62cda3c870e64f00998e7ee5485f5"]
  ["coq-metacoq-safechecker.1.3.2+8.19" "git+https://github.com/MetaCoq/metacoq.git#a9f5da7534b62cda3c870e64f00998e7ee5485f5"]
  ["coq-metacoq-erasure.1.3.2+8.19" "git+https://github.com/MetaCoq/metacoq.git#a9f5da7534b62cda3c870e64f00998e7ee5485f5"]
]

build: [
  [make]
  [make "examples"] {with-test}
  [make "html"] {with-doc}
]
install: [
  [make "install"]
  [make "-C" "examples" "install"] {with-test}
]
