opam-version: "2.0"
name: "coq-concert"
version: "dev"
synopsis: "A framework for smart contract verification in Coq"
description: """
A framework for smart contract verification in Coq
"""
maintainer: "Danil Annenkov <danil.v.annenkov@gmail.com>"
authors: "The COBRA team"
license: "MIT"
homepage: "https://github.com/AU-COBRA/ConCert"
dev-repo: "git+https://github.com/AU-COBRA/ConCert.git"
bug-reports: "https://github.com/AU-COBRA/ConCert/issues"
doc: "https://au-cobra.github.io/ConCert/toc.html"

depends: [
  "coq" {>= "8.20" & < "8.21~"}
  "coq-bignums" {>= "8"}
  "coq-quickchick" {>= "2.0.4"}
  "coq-metacoq-utils" {>= "1.3.1" & < "1.4~"}
  "coq-metacoq-common" {>= "1.3.1" & < "1.4~"}
  "coq-metacoq-template" {>= "1.3.1" & < "1.4~"}
  "coq-metacoq-template-pcuic" {>= "1.3.1" & < "1.4~"}
  "coq-metacoq-pcuic" {>= "1.3.1" & < "1.4~"}
  "coq-metacoq-safechecker" {>= "1.3.1" & < "1.4~"}
  "coq-metacoq-erasure" {>= "1.3.1" & < "1.4~"}
  "coq-rust-extraction" {= "dev"}
  "coq-elm-extraction" {= "0.1.0"}
  "coq-stdpp" {>= "1.10.0" & < "1.12~"}
]

pin-depends: [
  ["coq-metacoq-utils.1.3.2+8.20" "git+https://github.com/MetaCoq/metacoq.git#ea3ed3c4b0d05508ce744f17a56c880c5f47c816"]
  ["coq-metacoq-common.1.3.2+8.20" "git+https://github.com/MetaCoq/metacoq.git#ea3ed3c4b0d05508ce744f17a56c880c5f47c816"]
  ["coq-metacoq-template.1.3.2+8.20" "git+https://github.com/MetaCoq/metacoq.git#ea3ed3c4b0d05508ce744f17a56c880c5f47c816"]
  ["coq-metacoq-template-pcuic.1.3.2+8.20" "git+https://github.com/MetaCoq/metacoq.git#ea3ed3c4b0d05508ce744f17a56c880c5f47c816"]
  ["coq-metacoq-pcuic.1.3.2+8.20" "git+https://github.com/MetaCoq/metacoq.git#ea3ed3c4b0d05508ce744f17a56c880c5f47c816"]
  ["coq-metacoq-safechecker.1.3.2+8.20" "git+https://github.com/MetaCoq/metacoq.git#ea3ed3c4b0d05508ce744f17a56c880c5f47c816"]
  ["coq-metacoq-erasure.1.3.2+8.20" "git+https://github.com/MetaCoq/metacoq.git#ea3ed3c4b0d05508ce744f17a56c880c5f47c816"]
  ["coq-rust-extraction.dev" "git+https://github.com/AU-COBRA/coq-rust-extraction.git#c5d9cbae417213fe25b42f08678f28507cc6b99e"]
]

build: [
  [make "core"]
  [make "examples"] {with-test}
  [make "html"] {with-doc}
]
install: [
  [make "install"]
  [make "-C" "examples" "install"] {with-test}
]
