opam-version: "2.0"
name: "coq-concert"
version: "dev"
synopsis: "A framework for smart contract verification in Coq"
description: """
A framework for smart contract verification in Coq
"""
maintainer: "Danil Annenkov <danil.v.annenkov@gmail.com>"
authors: "The COBRA team"
license: "MIT"
homepage: "https://github.com/AU-COBRA/ConCert"
dev-repo: "git+https://github.com/AU-COBRA/ConCert.git"
bug-reports: "https://github.com/AU-COBRA/ConCert/issues"
doc: "https://au-cobra.github.io/ConCert/toc.html"

depends: [
  "coq" {>= "8.20" & < "8.21~"}
  "coq-bignums" {>= "8"}
  "coq-quickchick" {>= "2.0.4"}
  "coq-metacoq-utils" {>= "1.3.4" & < "1.4~"}
  "coq-metacoq-common" {>= "1.3.4" & < "1.4~"}
  "coq-metacoq-template" {>= "1.3.4" & < "1.4~"}
  "coq-metacoq-template-pcuic" {>= "1.3.4" & < "1.4~"}
  "coq-metacoq-pcuic" {>= "1.3.4" & < "1.4~"}
  "coq-metacoq-safechecker" {>= "1.3.4" & < "1.4~"}
  "coq-metacoq-erasure" {>= "1.3.4" & < "1.4~"}
  "coq-rust-extraction" {= "0.1.1"}
  "coq-elm-extraction" {= "0.1.1"}
  "coq-stdpp" {>= "1.10.0" & < "1.12~"}
]

build: [
  [make "core"]
  [make "examples"] {with-test}
  [make "html"] {with-doc}
]
install: [
  [make "install"]
]
