(lang dune 3.21)
(using rocq 0.11)
(name rocq-concert)
(version dev)

(generate_opam_files false)

(source (github AU-COBRA/ConCert))
(license MIT)
(authors "The COBRA team")
(maintainers "danil.v.annenkov@gmail.com")

(package
 (name rocq-concert)
 (synopsis "A framework for smart contract verification in Rocq")
 (depends
   (rocq-core (>= 9.1~))
   (rocq-stdlib (>= 9.0~))
   (rocq-bignums (>= 9~))
   (coq-quickchick (>= 2.0.4))
   (rocq-metarocq-utils (>= 1.4~))
   (rocq-metarocq-common (>= 1.4~))
   (rocq-metarocq-template (>= 1.4~))
   (rocq-metarocq-template-pcuic (>= 1.4~))
   (rocq-metarocq-pcuic (>= 1.4~))
   (rocq-metarocq-safechecker (>= 1.4~))
   (rocq-metarocq-erasure (>= 1.4~))
   (rocq-rust-extraction (= 0.2.0))
   (rocq-elm-extraction (= 0.2.0))
   (coq-stdpp (= 1.12.0))
   )
)

(package
 (name rocq-concert-examples)
 (synopsis "A framework for smart contract verification in Rocq")
 (depends
   (rocq-core (>= 9.1~))
   (rocq-stdlib (>= 9.0~))
   (rocq-bignums (>= 9~))
   (coq-quickchick (>= 2.0.4))
   (rocq-metarocq-utils (>= 1.4~))
   (rocq-metarocq-common (>= 1.4~))
   (rocq-metarocq-template (>= 1.4~))
   (rocq-metarocq-template-pcuic (>= 1.4~))
   (rocq-metarocq-pcuic (>= 1.4~))
   (rocq-metarocq-safechecker (>= 1.4~))
   (rocq-metarocq-erasure (>= 1.4~))
   (rocq-rust-extraction (= 0.2.0))
   (rocq-elm-extraction (= 0.2.0))
   (coq-stdpp (= 1.12.0))
   )
  (allow_empty)
)

(warnings (deprecated_coq_lang disabled))
