opam-version: "2.0"
name: "rocq-concert-examples"
version: "dev"
synopsis: "A framework for smart contract verification in Rocq"
description: """
A framework for smart contract verification in Rocq
"""
maintainer: "Danil Annenkov <danil.v.annenkov@gmail.com>"
authors: "The COBRA team"
license: "MIT"
homepage: "https://github.com/AU-COBRA/ConCert"
dev-repo: "git+https://github.com/AU-COBRA/ConCert.git"
bug-reports: "https://github.com/AU-COBRA/ConCert/issues"
doc: "https://au-cobra.github.io/ConCert/toc.html"

depends: [
  "rocq-concert-examples" {= version}
]

build: [
  [make "examples"]
  [make "html"] {with-doc}
]
install: [
  [make "install-examples"]
]
