opam-version: "2.0"
name: "rocq-concert"
version: "dev"
synopsis: "A framework for smart contract verification in Rocq"
description: """
A framework for smart contract verification in Rocq
"""
maintainer: "Danil Annenkov <danil.v.annenkov@gmail.com>"
authors: "The COBRA team"
license: "MIT"
homepage: "https://github.com/AU-COBRA/ConCert"
dev-repo: "git+https://github.com/AU-COBRA/ConCert.git"
bug-reports: "https://github.com/AU-COBRA/ConCert/issues"
doc: "https://au-cobra.github.io/ConCert/toc.html"

depends: [
  "rocq-core" {>= "9.0" & < "9.1~"}
  "rocq-stdlib" {>= "9.0" & < "9.1~"}
  "rocq-bignums" {>= "8"}
  "coq-quickchick" {>= "2.0.4"}
  "rocq-metarocq-utils" {>= "1.4" & < "1.4~"}
  "rocq-metarocq-common" {>= "1.4" & < "1.4~"}
  "rocq-metarocq-template" {>= "1.4" & < "1.4~"}
  "rocq-metarocq-template-pcuic" {>= "1.4" & < "1.4~"}
  "rocq-metarocq-pcuic" {>= "1.4" & < "1.4~"}
  "rocq-metarocq-safechecker" {>= "1.4" & < "1.4~"}
  "rocq-metarocq-erasure" {>= "1.4" & < "1.4~"}
  "coq-rust-extraction" {= "0.1.1"}
  "coq-elm-extraction" {= "0.1.1"}
  "coq-stdpp" {>= "1.11.0" & < "1.12~"}
]

build: [
  [make "core"]
  [make "examples"] {with-test}
  [make "html"] {with-doc}
]
install: [
  [make "install"]
]
