(rocq.theory
  (name ConCert.Examples.Crowdfunding)
  (package rocq-concert-examples)
  (synopsis "A framework for smart contract verification in Rocq")
  (modules :standard)
  (flags
    -w -notation-overridden
    -w -non-reversible-notation
    -output-dir extracted-code/
  )
  (theories
    Stdlib
    Ltac2
    Equations
    ExtLib
    MetaRocq
    TypedExtraction
    stdpp
    elpi
    elpi_elpi
    HB
    mathcomp
    SimpleIO
    ExtLib
    QuickChick
    ConCert.Utils
    ConCert.Execution
    ConCert.Execution.Test
    ConCert.Extraction
    ConCert.Embedding
    ConCert.Embedding.Extraction
  )
)
