(rocq.theory
  (name ConCert.Extraction)
  (package rocq-concert)
  (synopsis "A framework for smart contract verification in Rocq")
  (modules :standard)
  (flags
    -w -notation-overridden
    -w -non-reversible-notation
  )
  (theories
    Stdlib
    Ltac2
    Equations
    MetaRocq
    TypedExtraction
    ConCert.Utils
    ConCert.Execution
  )
)
