[package]
name = "interp"
version = "0.1.0"
authors = []
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]

std = ["concordium-std/std"]

[dependencies]
bumpalo = "3.5.0"
immutable-map = "0.1.2"

[dependencies.concordium-std]
git = "https://github.com/Concordium/concordium-rust-smart-contracts.git"
branch = "main"
default-features = false

[dev-dependencies.concordium-std]
git = "https://github.com/Concordium/concordium-rust-smart-contracts.git"
branch = "main"
features = ["std"] # std is needed because testing depends on std.

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = 3
# Don't unwind on panics, just trap.
# panic = "abort"
