[package]
name = "interp"
version = "0.1.0"
authors = ["Cobra"]
edition = "2018"

[features]
default = ["std"]

std = ["concordium-std/std"]

[dependencies]
concert-std = { path = "../concert-std" }
bumpalo = "3.5.0"
immutable-map = "0.1.2"


[dependencies.concordium-std]
git = "https://github.com/Concordium/concordium-rust-smart-contracts.git"
branch = "main"
default-features = false

[dev-dependencies.concordium-std]
git = "https://github.com/Concordium/concordium-rust-smart-contracts.git"
branch = "main"
features = ["std"] # std is needed because testing depends on std.

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = 3
