[package]
name = "concert-std"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["rlib"]

[dependencies]
bumpalo = "=3.5.0"
concert-std-derive = { path = "../concert-std-derive" }
immutable-map = "0.1.2"

[patch.crates-io]
concordium-std-derive = { git = "https://github.com/Concordium/concordium-rust-smart-contracts", rev="4d4b024b547a1f120f6d6951cbc409c94f8f146a" }

[dependencies.concordium-std]
version = "2.0.0"
default-features = false
