[package]
name = "escrow"
version = "0.1.0"
authors = ["Cobra"]
edition = "2018"

[features]
default = ["std"]

std = ["concordium-std/std"]

[dependencies]
concert-std = { path = "../concert-std" }
bumpalo = "=3.14.0"
immutable-map = "0.1.2"

[patch.crates-io]
concordium-std-derive = { git = "https://github.com/Concordium/concordium-rust-smart-contracts", rev="4d4b024b547a1f120f6d6951cbc409c94f8f146a" }

[dependencies.concordium-std]
version = "2.0.0"
default-features = false

[dev-dependencies.concordium-std]
version = "2.0.0"
features = ["std"] # std is needed because testing depends on std.

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = 3
